--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -44,8 +44,8 @@
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="material.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/components/home/material.css">
+    <link rel="stylesheet" href="/components/home/styles.css">
     <style>
     #view-source {
       position: fixed;
