se agregan los links a las redes sociales de brainstorming

--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -59,9 +59,9 @@
         </div>
         <footer class="mdl-mini-footer">
           <div class="mdl-mini-footer--left-section">
-            <button class="mdl-mini-footer--social-btn social-btn social-btn__twitter"></button>
-            <button class="mdl-mini-footer--social-btn social-btn social-btn__blogger"></button>
-            <button class="mdl-mini-footer--social-btn social-btn social-btn__gplus"></button>
+            <a class="mdl-button mdl-mini-footer--social-btn social-btn social-btn__twitter" style="min-width:0px; margin:0px;" target="_blank" href="https://twitter.com/brainstormingio"></a>
+            <!--button class="mdl-mini-footer--social-btn social-btn social-btn__blogger"></button-->
+            <a class="mdl-button mdl-mini-footer--social-btn social-btn social-btn__gplus"  style="min-width:0px; margin:0px;" target="_blank" href="https://plus.google.com/u/0/100119036012631003698/posts"></a>
           </div>
           <div class="mdl-mini-footer--right-section">
             <button class="mdl-mini-footer--social-btn social-btn__share"><i class="material-icons">share</i></button>
@@ -70,7 +70,7 @@
       </main>
       <div class="mdl-layout__obfuscator"></div>
     </div>
-    <a href="http://www.brainstorming.io/" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">Brainstorming</a>
+    <a href="http://www.brainstorming.io/" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">Brainstorming.io</a>
   <script>
     Array.prototype.forEach.call(document.querySelectorAll('.mdl-card__media'), function(el) {
       var link = el.querySelector('a');
